# JWT-D-E-MultiLanguages

./: .gitignore  README.md  index.html  index.js  package.json  readme.MD
server/C/: index.c
server/Go/: go.mod  go.sum  index.go
server/PHP/: index.php
server/Python/: index.py
server/Rust/: Cargo.toml
server/Rust/src/: main.rs  routes.rs
