[package]
name = "jwt-d-e-rust"
version = "0.0.0"
authors = ["Leo <leo@leopolanco.com>"]
edition = "2021"

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_cors = "0.5.2"
serde_json = "1.0.78"
jsonwebtoken = "7.2.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]